[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Fonts/GameFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Assets/Shaders/crt_material.tres" type="Material" id=3]
[ext_resource path="res://Assets/Fonts/GameFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Scripts/MainTitle.gd" type="Script" id=5]
[ext_resource path="res://loadAnim.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
outline_size = 2
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 8
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
outline_size = 2
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
position = Vector2( 512, 300 )
script = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="ViewportContainer" type="ViewportContainer" parent="."]
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
stretch = true
stretch_shrink = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 512, 300 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ViewportContainer/Viewport"]
anchor_mode = 0
current = true

[node name="ScreenSides" type="Node2D" parent="ViewportContainer/Viewport"]

[node name="ScreenSideL" type="ColorRect" parent="ViewportContainer/Viewport/ScreenSides"]
show_behind_parent = true
margin_right = 512.0
margin_bottom = 384.0
color = Color( 0.0980392, 0.0980392, 0.254902, 1 )

[node name="Labels" type="Node2D" parent="ViewportContainer/Viewport"]

[node name="Label" type="Label" parent="ViewportContainer/Viewport/Labels"]
visible = false
margin_left = 160.0
margin_top = 24.0
margin_right = 352.0
margin_bottom = 59.0
custom_fonts/font = ExtResource( 4 )
text = "GAME NAME
HERE"
align = 1

[node name="MashBash" type="Label" parent="ViewportContainer/Viewport/Labels"]
visible = false
margin_left = 160.0
margin_top = 48.0
margin_right = 352.0
margin_bottom = 115.0
custom_colors/font_color = Color( 0.588235, 1, 0.588235, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.556863, 0, 0, 1 )
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 1 )
text = "MASH
BASH"
align = 1
__meta__ = {
"_editor_description_": ""
}

[node name="Release Date" type="Label" parent="ViewportContainer/Viewport/Labels"]
margin_left = 160.0
margin_top = 360.0
margin_right = 352.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 2 )
text = "West-MECÂ© 2021"
align = 1

[node name="CoinCount" type="Label" parent="ViewportContainer/Viewport/Labels"]
margin_left = 160.0
margin_top = 225.0
margin_right = 352.0
margin_bottom = 255.0
custom_fonts/font = SubResource( 2 )
text = "PRESS E TO
INSERT 
COINS"
align = 1
valign = 2

[node name="Play" type="Label" parent="ViewportContainer/Viewport/Labels"]
visible = false
margin_left = 160.0
margin_top = 240.0
margin_right = 352.0
margin_bottom = 270.0
custom_fonts/font = SubResource( 2 )
text = "PRESS ENTER TO PLAY"
align = 1
valign = 2

[node name="Controls" type="Label" parent="ViewportContainer/Viewport/Labels"]
margin_top = 32.0
margin_right = 160.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 3 )
text = "CONTROLS:
A-LEFT
D-RIGHT

MENU:
ENTER-START
E-INSERT COIN
ESC-RETURN TO MENU
TAB-TOGGLE SHADER"
align = 1

[node name="CurrentGame" type="Label" parent="ViewportContainer/Viewport/Labels"]
margin_left = 160.0
margin_top = 165.0
margin_right = 352.0
margin_bottom = 195.0
custom_fonts/font = SubResource( 4 )
text = "FROG"
align = 1
valign = 2
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="HighScore" type="Label" parent="ViewportContainer/Viewport/Labels"]
visible = false
margin_left = 160.0
margin_top = 32.0
margin_right = 352.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 4 )
text = "HighScore:
0"
align = 1
autowrap = true
uppercase = true
__meta__ = {
"_editor_description_": ""
}

[node name="title" type="Label" parent="ViewportContainer/Viewport/Labels"]
margin_top = 8.0
margin_right = 512.0
margin_bottom = 32.0
custom_colors/font_color = Color( 0.447059, 0.568627, 1, 1 )
custom_colors/font_outline_modulate = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 5 )
text = "ARCADE MEGA-MASH"
align = 1

[node name="mashtext" type="Label" parent="ViewportContainer/Viewport/Labels"]
margin_left = 384.0
margin_top = 16.0
margin_right = 512.0
margin_bottom = 316.0
custom_fonts/font = ExtResource( 4 )
autowrap = true

[node name="mashtext2" type="Label" parent="ViewportContainer/Viewport/Labels"]
visible = false
margin_left = 192.0
margin_top = 150.0
margin_right = 320.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 4 )
text = "you WILL play mashbash."
align = 1
autowrap = true

[node name="Node2D" parent="ViewportContainer/Viewport" instance=ExtResource( 6 )]
position = Vector2( 32, 262.5 )
scale = Vector2( 2, 2 )
z_index = 32

[node name="CoinFlash" type="Timer" parent="."]
autostart = true

[node name="Shader" type="Sprite" parent="." groups=["SHADER"]]
material = ExtResource( 3 )
scale = Vector2( 16, 9.375 )
texture = ExtResource( 2 )
flip_v = true

[node name="Timer" type="Timer" parent="."]

[connection signal="timeout" from="CoinFlash" to="." method="_on_CoinFlash_timeout"]
